the game finally loads